--- a/ciwebfw/src/main/java/com/tieto/ciweb/web/StartPage.html
+++ b/ciwebfw/src/main/java/com/tieto/ciweb/web/StartPage.html
@@ -2,13 +2,13 @@
 <html xmlns:wicket="http://wicket.apache.org">
 	<head>
 		<meta charset="utf-8" />
-		<title>Apache Wicket Quickstart</title>
+		<title>Projects</title>
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" title="Stylesheet" />
 	</head>
 	<body>
 		<div id="bd" width="100%">
 			<wicket:panel>
-			<table wicket:id="datatable"></table>
+				<h3>Welcome to the CI Web Framework Demo. Please use the navigation bar in the page header to navigate on the web.</h3>
 			</wicket:panel>
 		</div>
 	</body>
