--- a/ciwebfw/src/main/java/com/tieto/ciweb/web/commits/CommitPage.html
+++ b/ciwebfw/src/main/java/com/tieto/ciweb/web/commits/CommitPage.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div id="bd" width="100%">
-			<wicket:extend>
+			<wicket:panel>
 			<div id="flowgraphdiv">
 			&nbsp;
 			</div>
@@ -51,7 +51,7 @@
     		<tr><td><b>Included in:</b></td></tr>
     		</table>
 			</div>
-			</wicket:extend>
+			</wicket:panel>
 		</div>
 	</body>
 </html>
