--- a/ciwebfw/src/main/java/com/tieto/ciweb/web/HomePage.html
+++ b/ciwebfw/src/main/java/com/tieto/ciweb/web/HomePage.html
@@ -6,10 +6,16 @@
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" title="Stylesheet" />
 	</head>
 	<body>
+		<div id="hd">
+			<h1>Tieto CI Web Framework</h1>
+			<div id="menu">
+				<ul>
+					<li wicket:id="listItems"><a wicket:id="Link"><span wicket:id="Text"></span></a></li>
+				</ul> 
+			</div>
+		</div>
 		<div id="bd">
-			<wicket:extend>
-			<h3>Welcome to the CI Web Framework Demo. Please use the navigation bar in the page header to navigate on the web.</h3>
-			</wicket:extend>
+			<div wicket:id="webwickerpanel"></div>
 		</div>
 	</body>
 </html>
