First working version of plugin system.
Finally, it works... ;)

--- a/WebWickerEiffel/src/main/java/com/tieto/webwicker/eiffel/web/projects/ProjectsPage.html
+++ b/WebWickerEiffel/src/main/java/com/tieto/webwicker/eiffel/web/projects/ProjectsPage.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div id="bd" width="100%">
-			<wicket:extend>
+			<wicket:panel>
 			<table>
 				<tr><th>Project name</th><th>Contributing teams</th><th>Contributing users</th><th>Latest commit</th><th>Commits / week</th></tr>
 				<tr><td>project1</td><td>2</td><td>7</td><td>2016-02-26 10:38</td><td>34</td></tr>
@@ -20,7 +20,7 @@
 				<tr><td>project8</td><td>2</td><td>6</td><td>2016-02-25 23:10</td><td>15</td></tr>
 				<tr><td>project9</td><td>3</td><td>13</td><td>2016-02-26 10:15</td><td>24</td></tr>
 			</table>
-			</wicket:extend>
+			</wicket:panel>
 		</div>
 	</body>
 </html>
