--- a/WebWickerCore/src/main/java/com/tieto/webwicker/web/ErrorPage.html
+++ b/WebWickerCore/src/main/java/com/tieto/webwicker/web/ErrorPage.html
@@ -2,14 +2,14 @@
 <html xmlns:wicket="http://wicket.apache.org">
 	<head>
 		<meta charset="utf-8" />
-		<title>Tieto CI Web Framework</title>
+		<title>Projects</title>
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" title="Stylesheet" />
 	</head>
 	<body>
-		<div id="bd">
-			<wicket:extend>
-			<h3>Welcome to the CI Web Framework Demo. Please use the navigation bar in the page header to navigate on the web.</h3>
-			</wicket:extend>
+		<div id="bd" width="100%">
+			<wicket:panel>
+				<h3 class="error">The page <span wicket:id="page">PAGE</span> could not be found!</h3>
+			</wicket:panel>
 		</div>
 	</body>
 </html>
