--- a/WebWickerEiffel/src/main/java/com/tieto/webwicker/eiffel/web/commits/CommitPage.html
+++ b/WebWickerEiffel/src/main/java/com/tieto/webwicker/eiffel/web/commits/CommitPage.html
@@ -2,12 +2,12 @@
 <html xmlns:wicket="http://wicket.apache.org">
 	<head>
 		<meta charset="utf-8" />
-		<title>Apache Wicket Quickstart</title>
+		<title>WebWicker</title>
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" title="Stylesheet" />
 	</head>
 	<body>
 		<div id="bd" width="100%">
-			<wicket:extend>
+			<wicket:panel>
 			<div id="flowgraphdiv">
 			&nbsp;
 			</div>
@@ -51,7 +51,7 @@
     		<tr><td><b>Included in:</b></td></tr>
     		</table>
 			</div>
-			</wicket:extend>
+			</wicket:panel>
 		</div>
 	</body>
 </html>
