--- a/WebWickerEiffel/src/main/java/com/tieto/webwicker/eiffel/web/products/ProductPage.html
+++ b/WebWickerEiffel/src/main/java/com/tieto/webwicker/eiffel/web/products/ProductPage.html
@@ -6,21 +6,8 @@
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" title="Stylesheet" />
 	</head>
 	<body>
-		<div id="hd">
-			<h1>Tieto CI Web Framework</h1>
-			<div id="menu">
-				<ul>
-					<li><wicket:link><a href="../HomePage.html">Home</a></wicket:link></li>
-					<li><wicket:link><a class="active" href="ProductsPage.html">Products</a></wicket:link></li>
-					<li><wicket:link><a href="../projects/ProjectsPage.html">Projects</a></wicket:link></li>
-					<li><a href="#">Teams</a></li>
-					<li><a href="#">Users</a></li>
-					<li><wicket:link><a href="../commits/CommitsPage.html">Commits</a></wicket:link></li>
-					<li><a href="#">Dashboards</a></li>
-				</ul> 
-			</div>
-		</div>
 		<div id="bd" width="100%">
+			<wicket:panel>
 			<table>
 				<tr><th>ArtifactId</th><th>Latest release</th><th>Latest snapshot</th><th>Commits in review</th></tr>
 				<tr><td>Artifact1</td><td>10.0</td><td>11.0.5</td><td>-</td></tr>
@@ -33,11 +20,7 @@
 				<tr><td>Artifact8</td><td>7.0</td><td>7.0</td><td>ee2bdc22b9936161c3e9bf5000f324517542a6f01</td></tr>
 				<tr><td>Artifact9</td><td>3.0</td><td>4.0.2</td><td>-</td></tr>
 			</table>
-		</div>
-		<div id="ft">
-			<p>
-				Developed with Wicket version <wicket:container wicket:id="version">1.5-SNAPSHOT</wicket:container>.&nbsp;
-			</p>
+			</wicket:panel>
 		</div>
 	</body>
 </html>
