--- a/ciwebfw/src/main/java/com/tieto/ciweb/web/ErrorPage.html
+++ b/ciwebfw/src/main/java/com/tieto/ciweb/web/ErrorPage.html
@@ -2,13 +2,13 @@
 <html xmlns:wicket="http://wicket.apache.org">
 	<head>
 		<meta charset="utf-8" />
-		<title>Apache Wicket Quickstart</title>
+		<title>Projects</title>
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" title="Stylesheet" />
 	</head>
 	<body>
 		<div id="bd" width="100%">
 			<wicket:panel>
-			<table wicket:id="datatable"></table>
+				<h3 class="error">The page <span wicket:id="page">PAGE</span> could not be found!</h3>
 			</wicket:panel>
 		</div>
 	</body>
